# avforge

./: .gitignore  Prompt_base.txt  README.md  page_00.txt  page_01.txt  page_02.txt  page_03.txt  page_04.txt  page_05.txt  page_06.txt  page_07.txt  page_08.txt  page_09.txt  page_10.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_20.txt  page_21.txt  page_22.txt  page_23.txt  page_24.txt  page_25.txt  pyproject.toml  test_rating_filter.py  test_tmdb.py  test_vidsrc_mirrors.py
data/seedance_prompts/: dataset_summary.json  train.jsonl
data/seedance_prompts/raw_hf/: .gitattributes  README.md  metadata.jsonl
data/synth/: manifest.json
data/synth/collision_00000/: meta.json
data/synth/collision_00001/: meta.json
data/synth/extension_seam_00000/: meta.json
data/synth/extension_seam_00001/: meta.json
data/synth/fluid_00000/: meta.json
data/synth/fluid_00001/: meta.json
data/synth/hf_noise_00000/: meta.json
data/synth/hf_noise_00001/: meta.json
data/synth/multispeaker_00000/: meta.json
data/synth/multispeaker_00001/: meta.json
data/synth/text_edit_00000/: meta.json
data/tmdb_test/: manifest.csv
docs/: 01_DESIGN.md  02_ARCHITECTURE.md  03_DATA.md  04_EVALUATION.md  05_PROMPTS.md  06_DATA_COLLECTION.md  SEEDANCE_2_0_SPECIFICATION.md  avforge_spec.md  implementation_plan.md
src/avforge/: __init__.py  cli.py  config.py  encoders.py  model.py  pipeline.py  prompts.py  registry.py  sampler.py
src/avforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+14 files in other folders)
